styles/pages/dei-report-page.scss
.dei-report-page{
  #reportSelector {
    margin: 0 15px;
    position: relative;

    .svg-arrow {
      transform: rotate(-90deg);
      width: 1rem;
      position: absolute;
      right: 1rem;
      top: 1rem;
    }
  
    select {
      appearance: none;
      background-color: transparent;
      border: 1px solid black;
      border-radius: 0;
      padding: 0.25em 3em 0.25em 1em;
      margin: 0;
      cursor: inherit;
      line-height: inherit;
      font-family: $base-font-family;
      font-size: 1.25rem;
      width: 100%;
    }
  
    @media (min-width: $tablet) {
      margin: 0 auto;
      max-width: 1325px;

      .svg-arrow {
        top: 2rem;
        right: calc(1rem + 15px);
      }

      select {
        width: auto;
        position: absolute;
        right: 15px;
        top: 1rem;
      }
    }
  }
}

